[tool.poetry]
name = "caveconv"
version = "0.1.0"
description = "CaveConv"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jinja2 = "^3.1.4"
pandas = "^2.2.2"
pylint = "^3.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pandas = "^2.2.2"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
